# architectselection

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  main.py
backend/app/agents/: foundry_client.py  guidance_sync.py
backend/app/knowledge/: chroma_store.py  healthcare_cases.py  sqlite_store.py
backend/app/scoring/: contracts.py  engine.py  rag.py  weights.py
backend/app/spec/: agents.py  generator.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: healthcare-cases.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ArchDiagram.tsx  Dashboard.tsx  DevinSpecTab.tsx  FunctionalSpec.tsx  ImplementationSpecTab.tsx  WizardStep.tsx
