[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.1"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
chromadb = "^1.5.5"
sentence-transformers = "^5.2.3"
beautifulsoup4 = "^4.14.3"
httpx = "^0.28.1"
langchain-text-splitters = ">=0.2.0"
apscheduler = "^3.11.2"
feedparser = "^6.0.12"
readability-lxml = "^0.8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
